Fix properties & Fix sample

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Milkcocoa ESP8266 SDK
+name=Milkcocoa Wio LTE SDK
 version=0.0.1
-author=Technical Rockstars
+author=JKsoft
 maintainer=Technical Rockstars <staff@technicalrockstars.co.jp>
-sentence=Milkcocoa SDK for Arduino & ESP8266.
-paragraph=Milkcocoa SDK for Arduino & ESP8266.
+sentence=Milkcocoa SDK for Arduino & Wio LTE
+paragraph=Milkcocoa SDK for Arduino & Wio LTE.
 category=Communication
-url=https://github.com/milk-cocoa/Milkcocoa_ESP8266_SDK
+url=https://github.com/junichikatsu/Milkcocoa_Wio_LTE-master
 architectures=*
